--- a/static/lab/lab00.Rmd
+++ b/static/lab/lab00.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'STAT564 Lab 0: Introduction to Rfor Simple Linear Regression Analysis'
+title: 'STAT564 Lab 0: Introduction to R for Simple Linear Regression Analysis'
 author: "Shen Qu"
 date: "9/21/2018"
 output: 
@@ -30,9 +30,9 @@ head(TVads) # This will print only the first 6 rows of data file
 TVads # This will print the complete data file in the Console Window 
 
 # The following plot function creates the scatterplot shown in Figure 1 below
-plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week")
+plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week", main="Figure 1: Scatterplot of Millions of retained impressions per week and TV advertising budget")
 ```
-Figure 1: Scatterplot of Millions of retained impressions per week and TV advertising budget.
+
 
 
 Simple linear regression analysis in R 
@@ -47,10 +47,10 @@ summary(model) # The summary function is used to get more information about the 
 The output shows estimated regression coefficients, their standard errors (deviations), test statistics & p-value for testing significance. Also, there is R squared, degrees of freedom and F test statistic for testing significance of fitted model.
 You can use the abline function as shown below to plot the fitted regression model on the scatterplot.
 ```{r, echo=TRUE}
-plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week") # Create the scatterplot
+plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week", main="Figure 2: Fitted rgeression model oevrlayed on the scatterplot of Millions of retained impressions per week and TV advertising budget") # Create the scatterplot
 abline(model, col = "red", lwd= 3) # Draw the fitted line #
 ```
-Figure 2: Fitted rgeression model oevrlayed on the scatterplot of Millions of retained impressions per week and TV advertising budget.
+
 
 The 95% CI for parameter estimates can be obtained using the following function: 
 ```{r, echo=TRUE}
@@ -83,7 +83,7 @@ plot(model) # This plots the diagnostic graphs for the fitted regression model. 
 
 When you want to do multiple linear regression in R, you can add other predictors to the lm function each separated by a plus sign.
 
-
+## The Solution by tidyverse
 ```{r, eval=FALSE}
 install.packages("tidyverse")
 ```
@@ -97,7 +97,7 @@ library("tidyverse")
 library(tidyverse)
 ```
 
-## Import Data
+### Import Data
 
 1. Download the data file [here](TVads.txt) .
 2. What format is the data file in?
@@ -112,9 +112,9 @@ Of course, the step of import data into your statistic software vary a little by
 
 More information as of how to import data into R can be found at [Import Data]()
 
-## Descriptive Statistics
+### Descriptive Statistics
 
-### Visualization
+#### Visualization
 
 1. Visualize a single variable
 ```{r, echo=TRUE}
@@ -130,20 +130,20 @@ ggplot(my_df, aes(x=Spend)) + geom_histogram()
 ggplot(my_df, aes(x=Spend, y=MilImp)) + geom_point()
 ```
 
-## Correlation
+### Correlation
 
 ```{r, echo=TRUE}
 cor(my_df$MilImp, my_df$Spend)
 ```
 
-## Regression
+### Regression
 In R, run linear regressions with `lm` (short for **l**inear **m**odel):
 
 ```{r, echo=TRUE}
 lm(MilImp ~ Spend, data=my_df)
 ```
 
-## More detailed regression results
+### More detailed regression results
 
 1. Pass the results from `lm()` to `summary()` for more detailed information:
 ```{r, echo=TRUE}
@@ -166,13 +166,13 @@ lm(MilImp ~ Spend, data=my_df) %>%
   htmlreg(file="lm_MilImp-Spend.html")
 ```
 
-## Visualize regression results
+### Visualize regression results
 
 ```{r, echo=TRUE}
 ggplot(my_df, aes(x=Spend, y=MilImp)) + geom_point() + geom_smooth(method = "lm", se = FALSE)
 ```
 
-## Diagnostic plots of regression
+### Diagnostic plots of regression
 
 We will use the `ggfortify` package to generate the diagnostic plots for regression
 ```{r, echo=TRUE}
@@ -192,14 +192,6 @@ ggsave("MilImp_lm_diag.png")
 
 ```
 
-## Tasks
-
-1. Create a new RStudio project and create directory structure following the recommendation in [Project Management With RStudio](http://swcarpentry.github.io/r-novice-gapminder/02-project-intro/);
-1. Select a dataset from the [Tools and Datasets] section of the course website or use your own dataset, save the dataset in the data folder of your project;
-1. Famarlize yourself with your dataset with the data document;
-1. Create a script that imports your dataset into R and explores it with descriptive statistics and/or visulization;
-1. Choose a dependent variable and a couple of independent variables and run regression models;
-1. Create regression plot (scatter plot superimposed with a regression line) & diagnostic plots.
 
 ## Resources
 - [Introduction to R on Data Camp](https://campus.datacamp.com/courses/free-introduction-to-r/chapter-1-intro-to-basics-1?ex=1): A self-instruction course covering R basics.
