fix the figure's title

--- a/static/lab/lab00.Rmd
+++ b/static/lab/lab00.Rmd
@@ -30,7 +30,8 @@ head(TVads) # This will print only the first 6 rows of data file
 TVads # This will print the complete data file in the Console Window 
 
 # The following plot function creates the scatterplot shown in Figure 1 below
-plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week", main="Figure 1: Scatterplot of Millions of retained impressions per week and TV advertising budget")
+plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week", main="Figure 1: Scatterplot of Millions of retained impressions per week 
+     and TV advertising budget", cex.main=0.9)
 ```
 
 
@@ -47,7 +48,8 @@ summary(model) # The summary function is used to get more information about the 
 The output shows estimated regression coefficients, their standard errors (deviations), test statistics & p-value for testing significance. Also, there is R squared, degrees of freedom and F test statistic for testing significance of fitted model.
 You can use the abline function as shown below to plot the fitted regression model on the scatterplot.
 ```{r, echo=TRUE}
-plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week", main="Figure 2: Fitted rgeression model oevrlayed on the scatterplot of Millions of retained impressions per week and TV advertising budget") # Create the scatterplot
+plot(TVads$Spend, TVads$MilImp, pch=16, xlab = "TV advertising budget, 1983 ($ millions) ", ylab = "Millions of retained impressions per week", main="Figure 2: Fitted rgeression model oevrlayed on the scatterplot of 
+     Millions of retained impressions per week and TV advertising budget", cex.main=0.9) # Create the scatterplot
 abline(model, col = "red", lwd= 3) # Draw the fitted line #
 ```
 
