add hw00 to lab1

--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -1,11 +1,43 @@
 ---
-title: 'USP654 Lab 1: Intro to R & RStudio'
-author: "Liming Wang"
+title: 'STAT564 Lab 1: Review'
+author: "Shen Qu"
 date: "9/25/2017"
 output: 
   html_document:
     toc: true
 ---
+
+## Problem 1
+
+Let $X_{1},X_{2},X_{3}\sim iid\ N\left(0,\sigma ^{2}\right), and\ Z_{i}=\frac{X_{i}-\mu}{\sigma}\ for\ i=1,2,3$
+
+a. Specify the probability distribution of $Z_{i}$ along with the value(s) of parameter(s).
+
+ Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$ 
+
+a. Comptute the $E(Y_{1})$
+
+a. Comptute the $Var(Y_{1})$
+
+a. Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).
+
+a. Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).
+
+  Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$ 
+
+a. Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s).
+
+## Problem 2
+
+
+
+## Problem 3
+
+Let $Y|x=a+bx+\epsilon\ where\ a, b\ are constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$
+
+a. Comptute the $E(Y|x_{0})$
+
+a. Comptute the $Var(Y|x_{0})$
 
 ## Download and Install R and RStudio
 (for those not on lab computers)
