refine the equation

--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -47,7 +47,7 @@ a. Specify the distribution of this new randome variable and provide value(s) of
 
 ## Problem 3
 
-Let $Y|x=a+bx+\epsilon\ where\ a, b\ are constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$
+Let $Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$
 
 a. Comptute the $E(Y|x_{0})$
 
