--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -9,46 +9,50 @@ output:
 
 ## Problem 1
 
-Let $X_{1},X_{2},X_{3}\sim iid\ N\left(0,\sigma ^{2}\right), and\ Z_{i}=\frac{X_{i}-\mu}{\sigma}\ for\ i=1,2,3$
+Let $X_{1},X_{2},X_{3}\sim iid\ N\left(\mu,\sigma ^{2}\right), and\ Z_{i}=\frac{X_{i}-\mu}{\sigma}\ for\ i=1,2,3$
 
 a. Specify the probability distribution of $Z_{i}$ along with the value(s) of parameter(s).
 
+ $Z_{i}\sim iid\ N\left(0,1\right)$ 
+
  Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$ 
 
-a. Comptute the $E(Y_{1})$
+a. Comptute the $E(Y_{1})=0$
 
-a. Comptute the $Var(Y_{1})$
+a. Comptute the $Var(Y_{1})=3$
 
-a. Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).
+a. Specify the probability distribution of $Y_{1}\sim iid\ N(0,3)$ along with the value(s) of parameter(s).
 
-a. Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).
+a. Specify the probability distribution of $Z_{i}^2\sim\chi_{1}^2$ along with the value(s) of parameter(s).
 
-Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$ 
+    Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$ 
 
-a. Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s).
+a. Specify the probability distribution of $Y_{2}\sim\chi_{3}^2$ along with the value(s) of parameter(s).
 
 ## Problem 2
 
 Let $X_{1},X_{2},...X_{n}\sim iid\ N\left(0,\sigma ^{2}\right), and\ \overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}$
 
 a. Specify the distribution of $\overline{A}$ along with the value(s) of parameter(s).
+ $\overline{A}\sim\ N(0,1)$
 
-Let $W\sim\chi_{\nu_{1}}^2$ where $\nu_{1}$ is the degrees of freedom, $\overline{X}\ and\ W$ are indipendent.
+   Let $W\sim\chi_{\nu_{1}}^2$ where $\nu_{1}$ is the degrees of freedom, $\overline{X}\ and\ W$ are indipendent.
 
-Consider the new random variable $\frac{\overline{X}}{\sqrt{W/\nu_{1}}}$
+   Consider the new random variable $\frac{\overline{X}}{\sqrt{W/\nu_{1}}}\sim t_{\nu_{1}}$
 
 a. Specify the distribution of this new randome variable along with the value(s) of parameter(s).
 
-Let $V\sim\chi_{\nu_{1}}^2$ where $\nu_{2}$ is the degrees of freedom, $V\ and\ W$ are indipendent.
+   Let $V\sim\chi_{\nu_{1}}^2$ where $\nu_{2}$ is the degrees of freedom, $V\ and\ W$ are indipendent.
 
-Consider the new random variable $\frac{W/\nu_{1}}{V/\nu_{2}}$
+   Consider the new random variable $\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}$
 
 a. Specify the distribution of this new randome variable and provide value(s) of parameter(s).
+
 
 ## Problem 3
 
 Let $Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$
 
-a. Comptute the $E(Y|x_{0})$
+a. Comptute the $E(Y|x_{0})=a+bx$
 
-a. Comptute the $Var(Y|x_{0})$
+a. Comptute the $Var(Y|x_{0})=\sigma^2$
