--- a/docs/lab/lab01.Rmd
+++ b/docs/lab/lab01.Rmd
@@ -1,53 +1,58 @@
 ---
-title: 'USP654 Lab 1: Intro to R & RStudio'
-author: "Liming Wang"
+title: 'STAT564 Lab 1: Review'
+author: "Shen Qu"
 date: "9/25/2017"
 output: 
   html_document:
     toc: true
 ---
 
-## Download and Install R and RStudio
-(for those not on lab computers)
+## Problem 1
 
-- Install the R Software 
+Let $X_{1},X_{2},X_{3}\sim iid\ N\left(\mu,\sigma ^{2}\right), and\ Z_{i}=\frac{X_{i}-\mu}{\sigma}\ for\ i=1,2,3$
 
-    Go to http://cran.rstudio.com/ and click on Download R for Windows (or OSX), click on install R for the first time and download R. When the file is done downloading, double click  “R-3.4.1-win.exe” (or apporiate installation file for your OS) to install the file and select Run, and continue with the installation wizard.
+a. Specify the probability distribution of $Z_{i}$ along with the value(s) of parameter(s).
 
-- Install Rstudio 
+ $Z_{i}\sim iid\ N\left(0,1\right)$ 
 
-    There are many ways to interface with R from the bare-bones base R software, RStudio, or R Commander (a GUI wrapper for base R). We will be using RStudio for our labs. In order to install RStudio visit http://www.rstudio.com/products/rstudio/download and download RStudio for desktop for your operating system. If in the lab and RStudio is not installed and the software manager is not working you can download the zip/tar RStudio for windows, open the zip file, and run RStudio without installing. If you must do this, then I recommend downloading the zip/tar file to your H: drive where it stays after you switch computers.
+ Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$ 
 
-## [Introduction to R and RStudio](http://swcarpentry.github.io/r-novice-gapminder/01-rstudio-intro/)
+a. Comptute the $E(Y_{1})=0$
 
-## [Project Management With RStudio](http://swcarpentry.github.io/r-novice-gapminder/02-project-intro/)
+a. Comptute the $Var(Y_{1})=3$
 
-## R Packages
+a. Specify the probability distribution of $Y_{1}\sim iid\ N(0,3)$ along with the value(s) of parameter(s).
 
-One of the advantages of R is the thousands packages that extend the functionailities of base R. A major part of learning R is to learn to work with R packages. Besides the base R, we will use a suite of packages named [`tidyverse`](https://www.tidyverse.org/) that covers the whole process of data analysis. To install the `tidyverse` packages, you can use the **Packages** pane or run R function in RStudio's **Console** pane: 
+a. Specify the probability distribution of $Z_{i}^2\sim\chi_{1}^2$ along with the value(s) of parameter(s).
 
-```{r, eval=FALSE}
-install.packages("tidyverse")
-```
+    Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$ 
 
-To use R packages you have installed, include this line in your script or in the Console:
+a. Specify the probability distribution of $Y_{2}\sim\chi_{3}^2$ along with the value(s) of parameter(s).
 
-```{r, eval=FALSE}
-library("tidyverse")
-# Note here the quotation marks are optional and
-# it is the same as
-library(tidyverse)
-```
+## Problem 2
 
-## [Import Data](http://cities.github.io/datascience/import.html)
+Let $X_{1},X_{2},...X_{n}\sim iid\ N\left(0,\sigma ^{2}\right), and\ \overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}$
 
-## Tasks
+a. Specify the distribution of $\overline{A}$ along with the value(s) of parameter(s).
+ $\overline{A}\sim\ N(0,1)$
 
-1. Create a new RStudio project and create directory structure following the recommendation in [Project Management With RStudio](http://swcarpentry.github.io/r-novice-gapminder/02-project-intro/)
-1. Select a dataset from the [Tools and Datasets] section of the course website, save the dataset in the data folder of your project
-1. Famarlize yourself with your dataset with the data document;
-1. Create a script that imports your dataset into R and explores it with descriptive statistics and/or visulization.
+   Let $W\sim\chi_{\nu_{1}}^2$ where $\nu_{1}$ is the degrees of freedom, $\overline{X}\ and\ W$ are indipendent.
 
-## Resources
-- [Introduction to R on Data Camp](https://campus.datacamp.com/courses/free-introduction-to-r/chapter-1-intro-to-basics-1?ex=1): A self-instruction course covering R basics.
-- [R coding basics on Software Carpentry](http://swcarpentry.github.io/r-novice-gapminder/), hands-on tutorial on R basics, lesson 4-11.
+   Consider the new random variable $\frac{\overline{X}}{\sqrt{W/\nu_{1}}}\sim t_{\nu_{1}}$
+
+a. Specify the distribution of this new randome variable along with the value(s) of parameter(s).
+
+   Let $V\sim\chi_{\nu_{1}}^2$ where $\nu_{2}$ is the degrees of freedom, $V\ and\ W$ are indipendent.
+
+   Consider the new random variable $\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}$
+
+a. Specify the distribution of this new randome variable and provide value(s) of parameter(s).
+
+
+## Problem 3
+
+Let $Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$
+
+a. Comptute the $E(Y|x_{0})=a+bx$
+
+a. Comptute the $Var(Y|x_{0})=\sigma^2$
