--- a/static/lecture/lecture01.Rmd
+++ b/static/lecture/lecture01.Rmd
@@ -19,11 +19,20 @@ options(repos="https://cran.rstudio.com")
 
 # Outline
 
-- Syllabus
-- Review
-- Why Regression Analysis?
-- R/RStudio
-- Manage data analysis projects with RStudio
+## Equations:
+
+1. Normal Distribution $x\sim N(0,1)$
+
+  $N\left(0,\sigma ^{2}\right)$
+    
+1. Standard Normal(R4C3):
+
+  $fX(x) = \frac{1}{{\sqrt {2\pi } }}e^{ - \frac{{z^2 }}{2}} = .3989e^{ - 5z^2 }, -\infty<x<\infty$
+
+1. Poisson Distribution
+
+  $P\left( x \right) = \frac{{e^{ - \lambda } \lambda ^x }}{{x!}}$
+
 
 ---
 
