--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "USP654: Data Analysis II"
-subtitle: "Overview and Data Analysis Workflow"
-author: "Liming Wang"
+title: "STAT564"
+subtitle: "Sutdynotes"
+author: "Shen Qu"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   xaringan::moon_reader:
