--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "STAT564"
+title: "STAT561"
 subtitle: "Sutdynotes"
-author: "Shen Qu"
+author: "Teached by Fountain, convert by Shen Qu"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   xaringan::moon_reader:
@@ -17,32 +17,40 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
-# Equations:
-
-1. Normal Distribution $x\sim N(0,1)$
-  $N\left(0,\sigma ^{2}\right)$
+# 1. 2011-9-27:
+www.mth.pdx.edu/~fountain
+1. Definition: An "experiment" is a process that leads to one of several possible outcomes.
     
-1. Standard Normal(R4C3):
-  $fX(x) = \frac{1}{{\sqrt {2\pi } }}e^{ - \frac{{z^2 }}{2}} = .3989e^{ - 5z^2 }, -\infty<x<\infty$
+1. Definition: The 'sample space' (S) is the set of all possible outcomes of an experiment.
 
-1. Poisson Distribution
-  $P\left( x \right) = \frac{{e^{ - \lambda } \lambda ^x }}{{x!}}$
+1. Definition: An *event* is a subset of S
 
----
-
-# Review - 1
-
-- What is a sample?
-- What is an observation?
-- What is an attribute?
-- What is a variable?
-- What are the types of variables?
+- subset
+- intersection
+- union
+- Complemnet of A
+- empty set
 
 ---
 
-# Review - 1: Type of variables
+# 2. 
 
-![Type of variables](img/type-of-variables.png)
+1. Definition: A and B are disjiont or mutually exclusive, if $A\cup B=\emptyset$
+
+1. Let B be a subset of all possible subset of S. Then B is a *Borel field*, if
+
+   (1). $A\cup B=\emptyset$
+   (2). if $A\in B, then\ A^c\in B$
+   (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
+
+---
+
+# 3. Kolmugorov axious/properties
+
+let B be a **Borel field**. Then P is a _probability set_ `function` if
+   (1). $\forall A\in B,\ P(A)\ge0$
+   (2). $P(S)=1$
+   (3). $If A_{1},A_{2},A_{3},...are\ pairavise\ disjoint, then\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
 
 ---
 
