refine the page

--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -17,8 +17,11 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
-# 1. 2011-9-27:
+# 2011-9-27:
 www.mth.pdx.edu/~fountain
+
+## 1. 
+
 1. Definition: An "**experiment**" is a process that leads to one of several possible outcomes.
     
 1. Definition: The '**sample space**' (S) is the set of all possible outcomes of an experiment.
@@ -33,7 +36,7 @@ www.mth.pdx.edu/~fountain
 
 ---
 
-# 1. 
+## 1. 
 
 1. Definition: A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
 
@@ -45,7 +48,7 @@ www.mth.pdx.edu/~fountain
    
    (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
 
-# 1. Kolmugorov axious/properties
+## 1. Kolmugorov axious/properties
 
 let B be a **Borel field**. Then P is a **probability set function** if
    
@@ -57,7 +60,7 @@ let B be a **Borel field**. Then P is a **probability set function** if
 
 ---
 
-# 1. Example
+## 1. Example
 
   Roll a 6-sides die $S=\{1,2,3,4,5,6\}$
 
@@ -65,7 +68,7 @@ let B be a **Borel field**. Then P is a **probability set function** if
   
   Define：$P(A)=\begin{cases}1&if\ 2 \in A \\o&otherwise\end{cases}$ This is a well-defined probability function
   
-  Define: $P(A)=\frac{element in A}{6}\ $. This is also a well-defined probability function
+  Define: $ P(A)=\frac{element in A}{6}\ $. This is also a well-defined probability function
 
 ---
 
