--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -66,9 +66,9 @@ let B be a **Borel field**. Then P is a **probability set function** if
 
   $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$ is a well-defined **Borel field**
   
-  Define：$P(A)=\begin{cases}1&if\ 2 \in A \\o&otherwise\end{cases}$ This is a well-defined probability function
+  Define：$P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$ This is a well-defined probability function
   
-  Define: $ P(A)=\frac{element in A}{6}\ $. This is also a well-defined probability function
+  Define: $ P(A)=\frac{element in A}{6}\ $ This is also a well-defined probability function
 
 ---
 
