refine the format 3rd

--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "STAT561"
+title: "STAT 561"
 subtitle: "Sutdynotes"
-author: "Teached by Fountain, convert by Shen Qu"
+author: "Teached by Fountain, converted by Shen Qu"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   xaringan::moon_reader:
-    css: "example.css"
+    css: [default, metropolis, metropolis-fonts]
     seal: yes
     nature:
       highlightStyle: github
@@ -17,27 +17,22 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
-# 2011-9-27:
+2018-9-26:
 www.mth.pdx.edu/~fountain
-
 ## 1. 
-
-1. Definition: An "**experiment**" is a process that leads to one of several possible outcomes.
+1. Definition: An **experiment** is a process that leads to one of several possible outcomes.
     
-1. Definition: The '**sample space**' (S) is the set of all possible outcomes of an experiment.
+1. Definition: The **sample space** (S) is the set of all possible outcomes of an experiment.
 
-1. Definition: An *event* is a subset of S
+1. Definition: An **event** is a subset of S
 
 - subset
 - intersection
 - union
 - Complemnet of A
 - empty set
-
 ---
-
-## 1. 
-
+## 2. 
 1. Definition: A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
 
 1. Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
@@ -48,8 +43,7 @@ www.mth.pdx.edu/~fountain
    
    (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
 
-## 1. Kolmugorov axious/properties
-
+## 3. Kolmugorov axious/properties
 let B be a **Borel field**. Then P is a **probability set function** if
    
    (1). $\forall A\in B,\ P(A)\ge0$
@@ -60,15 +54,18 @@ let B be a **Borel field**. Then P is a **probability set function** if
 
 ---
 
-## 1. Example
-
+## 4. Example
   Roll a 6-sides die $S=\{1,2,3,4,5,6\}$
 
   $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$ is a well-defined **Borel field**
   
-  Define：$P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$ This is a well-defined probability function
+  Define：
+  $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$ 
+  This is a well-defined probability function
   
-  Define: $ P(A)=\frac{element in A}{6}\ $ This is also a well-defined probability function
+  Define: 
+  $ P(A)=\frac{element in A}{6}\ $ 
+  This is also a well-defined probability function
 
 ---
 
