--- a/static/lecture/lecture01.Rmd
+++ b/static/lecture/lecture01.Rmd
@@ -5,7 +5,7 @@ author: "Teached by Fountain, converted by Shen Qu"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   xaringan::moon_reader:
-    css: [default, metropolis, metropolis-fonts]
+    css: [default, tamu, tamu-fonts]
     seal: yes
     nature:
       highlightStyle: github
@@ -19,7 +19,7 @@ options(repos="https://cran.rstudio.com")
 
 2018-9-26:
 www.mth.pdx.edu/~fountain
-## 1. 
+### 1. 
 1. Definition: An **experiment** is a process that leads to one of several possible outcomes.
     
 1. Definition: The **sample space** (S) is the set of all possible outcomes of an experiment.
@@ -32,7 +32,7 @@ www.mth.pdx.edu/~fountain
 - Complemnet of A
 - empty set
 ---
-## 2. 
+### 2. 
 1. Definition: A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
 
 1. Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
@@ -43,7 +43,7 @@ www.mth.pdx.edu/~fountain
    
    (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
 
-## 3. Kolmugorov axious/properties
+### 3. Kolmugorov axious/properties
 let B be a **Borel field**. Then P is a **probability set function** if
    
    (1). $\forall A\in B,\ P(A)\ge0$
@@ -54,7 +54,7 @@ let B be a **Borel field**. Then P is a **probability set function** if
 
 ---
 
-## 4. Example
+### 4. Example
   Roll a 6-sides die $S=\{1,2,3,4,5,6\}$
 
   $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$ is a well-defined **Borel field**
@@ -64,7 +64,7 @@ let B be a **Borel field**. Then P is a **probability set function** if
   This is a well-defined probability function
   
   Define: 
-  $ P(A)=\frac{element in A}{6}\ $ 
+  $P(A)=\frac{element in A}{6}$ 
   This is also a well-defined probability function
 
 ---
