--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -44,23 +44,25 @@ www.mth.pdx.edu/~fountain
 ### 3. Kolmugorov axious/properties
 let B be a **Borel field**. Then P is a **probability set function** if
    (1). $\forall A\in B,\ P(A)\ge0$
-   
    (2). $P(S)=1$
-   
    (3). $If A_{1},A_{2},A_{3},...are\ pairavise\ disjoint, then\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
 ---
 
 ### 4. Example
   Roll a 6-sides die $S=\{1,2,3,4,5,6\}$
 
-  $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$ is a well-defined **Borel field**
+  $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$ 
+  
+  is a well-defined **Borel field**
   
   Define：
   $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$ 
+  
   This is a well-defined probability function
   
   Define: 
   $P(A)=\frac{element in A}{6}$ 
+  
   This is also a well-defined probability function
 
 ---
