--- a/static/lecture/lecture01.Rmd
+++ b/static/lecture/lecture01.Rmd
@@ -5,7 +5,7 @@ author: "Teached by Fountain, converted by Shen Qu"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   xaringan::moon_reader:
-    css: [default, ninjutsu, middlebury-fonts]
+    css: [ninjutsu, middlebury-fonts]
     seal: yes
     nature:
       highlightStyle: github
@@ -17,8 +17,7 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
-2018-9-26:
-www.mth.pdx.edu/~fountain
+2018-9-26: www.mth.pdx.edu/~fountain
 ### 1. 
 1. Definition: An **experiment** is a process that leads to one of several possible outcomes.
     
@@ -49,21 +48,18 @@ let B be a **Borel field**. Then P is a **probability set function** if
 ---
 
 ### 4. Example
-  Roll a 6-sides die $S=\{1,2,3,4,5,6\}$
+Roll a 6-sides die $S=\{1,2,3,4,5,6\}$
 
   $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$ 
+is a well-defined **Borel field**
   
-  is a well-defined **Borel field**
-  
-  Define：
+Define：
   $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$ 
+This is a well-defined **probability function**
   
-  This is a well-defined probability function
-  
-  Define: 
+Define: 
   $P(A)=\frac{element in A}{6}$ 
-  
-  This is also a well-defined probability function
+This is also a well-defined **probability function**
 
 ---
 
