--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "STAT 561"
-subtitle: "Sutdynotes"
-author: "Teached by Fountain, converted by Shen Qu"
+subtitle: "Sutdy notes"
+author: "Teached by Fountain"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   xaringan::moon_reader:
-    css: [ninjutsu, middlebury-fonts]
+    css: [middlebury, middlebury-fonts]
     seal: yes
     nature:
       highlightStyle: github
@@ -17,7 +17,7 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
-2018-9-26: www.mth.pdx.edu/~fountain
+ 2018-9-26: www.mth.pdx.edu/~fountain
 ### 1. 
 1. Definition: An **experiment** is a process that leads to one of several possible outcomes.
     
@@ -35,16 +35,14 @@ options(repos="https://cran.rstudio.com")
 1. Definition: A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
 
 1. Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
-   (1). $A\cup B=\emptyset$
-   
-   (2). if $A\in B, then\ A^c\in B$
-   
-   (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
+    (1). $A\cup B=\emptyset$
+    (2). if $A\in B, then\ A^c\in B$
+    (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
 ### 3. Kolmugorov axious/properties
 let B be a **Borel field**. Then P is a **probability set function** if
-   (1). $\forall A\in B,\ P(A)\ge0$
-   (2). $P(S)=1$
-   (3). $If A_{1},A_{2},A_{3},...are\ pairavise\ disjoint, then\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
+    (1). $\forall A\in B,\ P(A)\ge0$
+    (2). $P(S)=1$
+    (3). $If A_{1},A_{2},A_{3},...are\ pairavise\ disjoint, then\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
 ---
 
 ### 4. Example
