--- a/static/lecture/lecture01.Rmd
+++ b/static/lecture/lecture01.Rmd
@@ -5,7 +5,7 @@ author: "Teached by Fountain"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   xaringan::moon_reader:
-    css: [middlebury, middlebury-fonts]
+    css: "ninjutsu.css"
     seal: yes
     nature:
       highlightStyle: github
@@ -31,33 +31,39 @@ options(repos="https://cran.rstudio.com")
 - Complemnet of A
 - empty set
 ---
-### 2. 
+#### 2. 
 1. Definition: A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
 
 1. Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
-    (1). $A\cup B=\emptyset$
-    (2). if $A\in B, then\ A^c\in B$
-    (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
-### 3. Kolmugorov axious/properties
+    
+   (1). $A\cup B=\emptyset$
+    
+   (2). if $A\in B, then\ A^c\in B$
+    
+   (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
+#### 3. Kolmugorov axious/properties
 let B be a **Borel field**. Then P is a **probability set function** if
-    (1). $\forall A\in B,\ P(A)\ge0$
-    (2). $P(S)=1$
-    (3). $If A_{1},A_{2},A_{3},...are\ pairavise\ disjoint, then\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
+    
+   (1). $\forall A\in B,\ P(A)\ge0$
+    
+   (2). $P(S)=1$
+    
+   (3). $If A_{1},A_{2},A_{3},...are\ pairavise\ disjoint, then\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
 ---
 
 ### 4. Example
 Roll a 6-sides die $S=\{1,2,3,4,5,6\}$
 
   $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$ 
-is a well-defined **Borel field**
+  is a well-defined **Borel field**
   
 Define：
   $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$ 
-This is a well-defined **probability function**
+  This is a well-defined **probability function**
   
 Define: 
   $P(A)=\frac{element in A}{6}$ 
-This is also a well-defined **probability function**
+  This is also a well-defined **probability function**
 
 ---
 
