upgrade the space

--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -25,11 +25,11 @@ options(repos="https://cran.rstudio.com")
 
 1. Definition: An **event** is a subset of S
 
-- subset
-- intersection
-- union
-- Complemnet of A
-- empty set
+- subset $\subset$
+- intersection $\cap$
+- union $\cup$
+- Complemnet of A $A^c$
+- empty set $\emptyset$
 ---
 #### 2. 
 1. Definition: A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
@@ -75,37 +75,51 @@ Define:
 Theorem:
    $\forall A\in B,\ P(A^c)=1-P(A)$
    
-   Proof: $A\cap A^c=\emptyset$; $A\cup A^c=S$
+   Proof: 
+   
+   $A\cap A^c=\emptyset$; $A\cup A^c=S$
+   
    $P(A\cup A^c)=P(A)+P(A^c)$  [by K-3]
+   
    $P(S)=1$                   [by K-2]
-   $P(S)=1$
 
 Theorem:  
+
    $P(\emptyset)=0$
    
-   Proof: $\emptyset\cap S=\emptyset$; $\emptyset\cup S=S$
+   Proof: 
+   
+   $\emptyset\cap S=\emptyset$; $\emptyset\cup S=S$
+   
    $P(\emptyset\cup S)=P(\emptyset)+P(S)$; $P(\emptyset\cup S)=P(S)=1$
 
 ---
 ##### 6. 
 
 Theorem:  
+
    Let $A_{1}$ and $A_{2}$ the elements of B
+   
    with $A_{1}\subset A_{2}$, then $P(A_{1})\le P(A_{2})$
    
    Proof:
    Let $A_{1}\subset A_{2}$ with $A_{2}=A_{1}\cup (A_{2}\cap A_{1}^c)$
+   
    Also $A_{1}\cap(A_{2}\cap A_{1}^c)=\emptyset$
+   
    So $P(A_{2})=P(A_{1})+P(A_{2}\cap A_{1}^c)$
+   
    $P(A_{2}\cap A_{1}^c)\ge0$, $\therefore\ P(A_{2})\ge P(A_{1})$
 
 ---
  2018-09-27
 ##### 1. 
 Theorem:
+
    $P(A\cap B^c)=P(A)-P(A\cap B)$
    
    Proof:
+   
    $A=(A\cap B)\cup(A\cap B^c)=A\cap(B\cup B^c)$ by disirb law
     
    $=A\cap S=A$
@@ -118,22 +132,31 @@ Define:
 ---
 ##### 2. 
 Theorem:
+
    $P(A\cup B)=P(A)+P(B)-P(A\cap B)$
 
    Proof:
    $A\cup B=A\cup(B\cap A^c)$ 
+   
    $=(A\cup B)\cap(A\cup A^c)=A\cup B$
+   
    $P(A\cup B)=P(A)+ P(B\cap A^c)$
+   
    $=P(A)+P(B)-P(B\cap A)$
 ---
 ##### 3. 
 Define:
+
    $C_{1},C_{2},C_{3},...$ form a partition of S if
+   
    (1). $\bigcup_{i=1}^\infty C_i=S$ and
+   
    (2). $C_{i}\cap C_{j}=\emptyset$ for $i\ne j$
    
 Theorem:
+
    If $C_{1},C_{2},C_{3},...$ is a portition of $S_{1}$
+   
    then $P(A)=\sum_{i=1}^\infty P(A\cap C_{i})$
 ##### 4. 
    Proof:
@@ -143,11 +166,16 @@ Theorem:
 ---
 ##### 5. 
 Theorem:
+
    let $A_{1}, A_{2}$,...be events, then
+   
    $P(\bigcup_{i=1}^\infty A_i)\le\sum_{i=1}^\infty P(A_{i})$ [Boole's Ineq]
    
    Proof:
-   let $A_{1}^*=A_1$; $A_2^*=A_2\A_1$; $A_3^*=A_3\(A_1\cup A_2)$
+   
+   let $A_{1}^*=A_1$; $A_2^*=A_2\A_1$; 
+   
+   $A_3^*=A_3\(A_1\cup A_2)$
    
    $A_i^*=A_i\(\bigcup_{j=1}^{i-1} A_j)$
    
@@ -155,23 +183,30 @@ Theorem:
 
 ##### 6. 
    Also note: $\bigcup_{i=1}^\infty A_i=\bigcup_{i=1}^\infty A_i^*$
+   
    Then $P(\bigcup_{i=1}^\infty A_i)=P(\bigcup_{i=1}^\infty A_i^*)$
+   
    $=\sum_{i=1}^\infty P(A_i^*)\le\sum_{i=1}^\infty P(A_i)$ since $A_i^*<A_i$
 ---
 ##### 7. 
 Suppose we have n events $A_1, A_2,...A_n$
   with probabilities $P_1, P_2,...P_n$
 Find a lower bound on $P(A_1\cap ...\cap A_n)$
+
    $P(A_1\cap ...\cap A_n)^c=1-P(A_1\cap ...\cap A_n)$
    
    $P(A_1^c\cup ...\cup A_n^c)\le\sum_{i=1}^n P(A_i^c)$   [Boole]
+   
    $=\sum_{i=1}^\infty[1-P(A_i)]=n-\sum_{i=1}^\infty P(A_i)$
 ##### 8.    
    $1-P(A_1\cap ...\cap A_n)\le n-\sum_{i=1}^\infty P(A_i)$
+   
    $P(A_1\cap ...\cap A_n)\ge\sum_{i=1}^\infty P(A_i)-(n-1)$  [Bonferroni inequality]
    
 Question:
+
    If LHS is to the at least .95,
+   
    then what must each $P(A_i)$ be to guarantee that?
    
 ##### 9.  
@@ -179,10 +214,11 @@ Question:
    .95+n-1=np
    n-0.5=np
    p=1-.05/n
-   
+---
 Counting Rules
 
  1). Multiplication Rule: If you have a sequance of procedues, the total number and outcomes for the sequance is the product of the number of outcomes at each step
+ 
  2). Factorial Rule: The number of ways of ordering n items is n!
  
  3). Permutation Rule: The number of ways of ordering r items, selected from n items is
@@ -191,10 +227,13 @@ Counting Rules
  
  4). Combination Rule: The number of ways of selecting r items from n items without regard to order, is
  
- $C_r^n=(n\\r)=\$
+ $C_r^n=(_n^r)=\frac{P_r^n}{r!}=\frac{n!}{r!(n-r)!}$
  
  5). Permutation of like objects Rule:
- If there are n do sets of K different types, then the number of ways that they can be oredered is
+ If there are n do seek of K different types, then the number of ways that they can be oredered is
  
+  $\frac{n!}{n_1!n_2!...n_k!}$
  
- Ex: How many differenct ways can you under the un
+ Ex: How many differenct ways can you order the letters in "STATISTICS"?
+ 
+ $\frac{10!}{3!3!1!2!1!}$
