--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -21,17 +21,16 @@ options(repos="https://cran.rstudio.com")
  2018-09-26: www.mth.pdx.edu/~fountain
 #### 1. 
 Definition:  
-> An **experiment** is a process that leads to one of several possible outcomes.
-    
-> Definition: The **sample space** (S) is the set of all possible outcomes of an experiment.
-***
-* Definition: An **event** is a subset of S
+* An **experiment** is a process that leads to one of several possible outcomes.
+* The **sample space** (S) is the set of all possible outcomes of an experiment.
+* An **event** is a subset of S
 
+***
 - subset $\subset$
 - intersection $\cap$
 - union $\cup$
 + Complemnet of A $A^c$
->- empty set $\emptyset$
+- empty set $\emptyset$
 ---
 #### 2. 
 1. Definition: A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
