try the table 3rd

--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -26,7 +26,8 @@ Definition:
 * An **event** is a subset of S
 
 ***
-     |   
+
+ <span></span> | <span></span> 
 --- | ---
 subset | $\subset$
 intersection | $\cap$
