--- a/static/lecture/lecture01.Rmd
+++ b/static/lecture/lecture01.Rmd
@@ -26,6 +26,7 @@ Definition:
 * An **event** is a subset of S
 
 ***
+{.table .table-condensed .table-striped .text-left}
 
  <span></span> | <span></span> 
 --- | ---
