--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -9,7 +9,7 @@ output:
     seal: yes
     nature:
       highlightStyle: github
-    toc: TRUE
+
 ---
 
 ```{r setup, include=F}
@@ -20,19 +20,18 @@ options(repos="https://cran.rstudio.com")
 
  2018-09-26: www.mth.pdx.edu/~fountain
 #### 1. Set Theory
-Definition:  
+: Definition:  
 * An **experiment** is a process that leads to one of several possible outcomes.
 * The **sample space** (S) is the set of all possible outcomes of an experiment.
 * An **event** is a subset of S
 
-{.table .table-condensed .table-striped .text-left}
- <span></span>     | <span></span>
---- | ---
-subset | $\subset$
-intersection | $\cap$
-union | $\cup$
-Complemnet of A | $A^c$
-empty set | $\emptyset$
+
+|--- | --- |
+|subset | $\subset$ |
+|intersection | $\cap$ |
+|union | $\cup$ |
+|Complemnet of A | $A^c$ |
+|empty set | $\emptyset$ |
 ---
 #### 2. Axiomatic Foundations: Borel field
 Definition: 
@@ -54,25 +53,24 @@ let B be a **Borel field**. Then P is a **probability set function** if
 
 #### 4. Example
 Roll a 6-sides die 
->
-$S=\{1,2,3,4,5,6\}$
+> $S=\{1,2,3,4,5,6\}$
   $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$  
   
   is a well-defined **Borel field**  
 Define：
-  $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$  
+> $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$  
   
   This is a well-defined **probability function**  
 Define: 
-  $P(A)=\frac{element in A}{6}$  
-This is also a well-defined **probability function**
+> $P(A)=\frac{element in A}{6}$  
 
+This is also a well-defined **probability function**
 ---
 
 #### 5. The Calculus of Probabilities
 Theorem 1.2.8:
 > (1). $\forall A\in B,\ P(A^c)=1-P(A)$  
-  (2).$P(\emptyset)=0$
+  (2). $P(\emptyset)=0$
 
 Proof (1): 
    *** 
@@ -80,9 +78,9 @@ Proof (1):
    ***
    $A\cup A^c=S$
    ***
-   $P(A\cup A^c)=P(A)+P(A^c) & [by K-3]$ 
+   $P(A\cup A^c)=P(A)+P(A^c)$  [by K-3] 
    ***
-   $P(S)=1$ &                  [by K-2]
+   $P(S)=1$                   [by K-2]
 
 Proof (2):
    ***
@@ -234,6 +232,6 @@ Counting Rules
  
   $\frac{n!}{n_1!n_2!...n_k!}$
  
- Ex: How many differenct ways can you order the letters in "STATISTICS"?
+ (@)  Ex: How many differenct ways can you order the letters in "STATISTICS"?
  
  $\frac{10!}{3!3!1!2!1!}$
