--- a/static/lecture/lecture01.Rmd
+++ b/static/lecture/lecture01.Rmd
@@ -26,12 +26,12 @@ options(repos="https://cran.rstudio.com")
 * An **event** is a subset of S
 
 
-|--- | --- |
-|subset | $\subset$ |
-|intersection | $\cap$ |
-|union | $\cup$ |
-|Complemnet of A | $A^c$ |
-|empty set | $\emptyset$ |
+| --- | --- |
+| subset | $\subset$ |
+| intersection | $\cap$ |
+| union | $\cup$ |
+| Complemnet of A | $A^c$ |
+| empty set | $\emptyset$ |
 ---
 #### 2. Axiomatic Foundations: Borel field
 Definition: 
@@ -73,39 +73,28 @@ Theorem 1.2.8:
   (2). $P(\emptyset)=0$
 
 Proof (1): 
-   *** 
-   $A\cap A^c=\emptyset$;
-   ***
-   $A\cup A^c=S$
-   ***
-   $P(A\cup A^c)=P(A)+P(A^c)$  [by K-3] 
-   ***
-   $P(S)=1$                   [by K-2]
+>  $A\cap A^c=\emptyset$  
+   $A\cup A^c=S$  
+   $P(A\cup A^c)=P(A)+P(A^c)$  [by K-3]  
+   $P(S)=1$                    [by K-2]  
 
 Proof (2):
-   ***
-   $\emptyset\cap S=\emptyset$; $\emptyset\cup S=S$
-   ***
+>  $\emptyset\cap S=\emptyset$  
+   $\emptyset\cup S=S$  
    $P(\emptyset\cup S)=P(\emptyset)+P(S)$; $P(\emptyset\cup S)=P(S)=1$
 
 ---
-#### 6. 
-
-- Theorem:  
-
-   Let $A_{1}$ and $A_{2}$ the elements of B
+#### 6. The Calculus of Probabilities
+Theorem 1.2.9:  
+>  Let $A_{1}$ and $A_{2}$ the elements of B with $A_{1}\subset A_{2}$, then  
+   $P(A_{1})\le P(A_{2})$
    
-   with $A_{1}\subset A_{2}$, then $P(A_{1})\le P(A_{2})$
-   
-   Proof:
-   
-   Let $A_{1}\subset A_{2}$ with $A_{2}=A_{1}\cup (A_{2}\cap A_{1}^c)$
-   
-   Also $A_{1}\cap(A_{2}\cap A_{1}^c)=\emptyset$
-   
-   So $P(A_{2})=P(A_{1})+P(A_{2}\cap A_{1}^c)$
-   
-   $P(A_{2}\cap A_{1}^c)\ge0$, $\therefore\ P(A_{2})\ge P(A_{1})$
+Proof:
+>  Let $A_{1}\subset A_{2}$ with $A_{2}=A_{1}\cup (A_{2}\cap A_{1}^c)$  
+   Also $A_{1}\cap(A_{2}\cap A_{1}^c)=\emptyset$  
+   So $P(A_{2})=P(A_{1})+P(A_{2}\cap A_{1}^c)$  
+   $P(A_{2}\cap A_{1}^c)\ge0$  
+   $\therefore\ P(A_{2})\ge P(A_{1})$
 
 ---
  2018-09-27
