--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -25,7 +25,7 @@ options(repos="https://cran.rstudio.com")
 * The **sample space** (S) is the set of all possible outcomes of an experiment.
 * An **event** is a subset of S
 
-
+{.table .table-condensed .table-striped .text-left}
 | --- | --- |
 | subset | $\subset$ |
 | intersection | $\cap$ |
