--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -26,13 +26,13 @@ Definition:
 * An **event** is a subset of S
 
 {.table .table-condensed .table-striped .text-left}
-| <span></span>     | <span></span> |
-| --- | --- |
-| subset | $\subset$ |
-| intersection | $\cap$ |
-| union | $\cup$ |
-| Complemnet of A | $A^c$ |
-| empty set | $\emptyset$ |
+ <span></span> | <span></span> 
+ --- | --- 
+ subset | $\subset$ 
+ intersection | $\cap$ 
+ union | $\cup$ 
+ Complemnet of A | $A^c$ 
+ empty set | $\emptyset$ 
 ---
 #### 2. Axiomatic Foundations: Borel field
 Definition: 
@@ -203,18 +203,14 @@ Counting Rules
  2). Factorial Rule: The number of ways of ordering n items is **n!**
  
  3). Permutation Rule: The number of ways of ordering r items, selected from n items is
- 
-> $P_r^n=n(n-1)(n-2)...(n-r+1)=\frac{n!}{(n-r)!}$
+ > $P_r^n=n(n-1)(n-2)...(n-r+1)=\frac{n!}{(n-r)!}$
  
  4). Combination Rule: The number of ways of selecting r items from n items without regard to order, is
- 
-> $C_r^n=(_n^r)=\frac{P_r^n}{r!}=\frac{n!}{r!(n-r)!}$
+ > $C_r^n=(_n^r)=\frac{P_r^n}{r!}=\frac{n!}{r!(n-r)!}$
  
  5). Permutation of like objects Rule:
  If there are n do seek of K different types, then the number of ways that they can be oredered is
- 
->  $\frac{n!}{n_1!n_2!...n_k!}$
+ >  $\frac{n!}{n_1!n_2!...n_k!}$
  
 (@) Ex: How many differenct ways can you order the letters in "STATISTICS"?
- 
- $\frac{10!}{3!3!1!2!1!}$
+> $\frac{10!}{3!3!1!2!1!}$
