--- a/static/lecture/lecture01.Rmd
+++ b/static/lecture/lecture01.Rmd
@@ -27,7 +27,7 @@ Definition:
 
 {.table .table-condensed .table-striped .text-left}
 
- --- | --- 
+ <span></span> | <span></span>
  subset | $\subset$ 
  intersection | $\cap$ 
  union | $\cup$ 
@@ -181,15 +181,12 @@ Suppose we have n events $A_1, A_2,...A_n$
   with probabilities $P_1, P_2,...P_n$
 Find a lower bound on $P(A_1\cap ...\cap A_n)$
 >  $P(A_1\cap ...\cap A_n)^c=1-P(A_1\cap ...\cap A_n)$  
-   $P(A_1^c\cup ...\cup A_n^c)\le\sum_{i=1}^n P(A_i^c)$   [Boole]  
-   $=\sum_{i=1}^\infty[1-P(A_i)]=n-\sum_{i=1}^\infty P(A_i)$  
-   $1-P(A_1\cap ...\cap A_n)\le n-\sum_{i=1}^\infty P(A_i)$  
-   $P(A_1\cap ...\cap A_n)\ge\sum_{i=1}^\infty P(A_i)-(n-1)$  
+>  $P(A_1^c\cup ...\cup A_n^c)\le\sum_{i=1}^n P(A_i^c)$   [Boole]  
+>  $=\sum_{i=1}^\infty[1-P(A_i)]=n-\sum_{i=1}^\infty P(A_i)$  
+>  $1-P(A_1\cap ...\cap A_n)\le n-\sum_{i=1}^\infty P(A_i)$  
+>  $P(A_1\cap ...\cap A_n)\ge\sum_{i=1}^\infty P(A_i)-(n-1)$  
    
-Question:
-
-   If LHS is to the at least .95, then what must each $P(A_i)$ be to guarantee that?
-   
+Question:If LHS is to the at least .95, then what must each $P(A_i)$ be to guarantee that?
 #### 9.  
    .95=np-(n-1)
    .95+n-1=np
