--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -26,7 +26,8 @@ Definition:
 * An **event** is a subset of S
 
 {.table .table-condensed .table-striped .text-left}
- <span>name</span> | <span></span>
+ 
+ <span>name</span> | <span>symbol</span>
  --- |---
  subset | $\subset$ 
  intersection | $\cap$ 
