try table finnal

--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -25,7 +25,7 @@ Definition:
 * The **sample space** (S) is the set of all possible outcomes of an experiment.
 * An **event** is a subset of S
 
-{.table .table-condensed .table-striped .text-left}
+{.table .table-condensed .table-striped .text-center}
  
  <span>name</span> | <span>symbol</span>
  --- |---
