--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -5,20 +5,17 @@ date: "9/25/2017"
 output: 
   html_document:
     toc: true
+    toc_float: true
 ---
 
-## Problem 1
+### Problem 1
 * Let $X_{1},X_{2},X_{3}\sim iid\ N\left(\mu,\sigma ^{2}\right), and\ Z_{i}=\frac{X_{i}-\mu}{\sigma}\ for\ i=1,2,3$  
 (a). Specify the probability distribution of $Z_{i}$ along with the value(s) of parameter(s).  
 
-We indicate that Y is a random variable that follows a normal distribution with mean μ and variance σ 2 by  
+$X_{1},X_{2},X_{3}$ are three random variable that follows a normal distribution with same mean μ and variance σ 2   
 
- > Y ∼ N(μ,σ 2 )  
 Z is called the standard normal random variable.  
  $Z_{i}\sim iid\ N\left(0,1\right)$   
-Let Z = (Y − μ )/ σ . If Y ∼ N ( μ , σ 2 ), then Z 2 follows a χ 2 distribution, which we denote by  
-Z2∼ χ 2
-The key point is that the square of a standard normal random variable is a χ 2 random variable with one degree of freedom.  
 
 
 * Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
@@ -36,12 +33,25 @@ The key point is that the square of a standard normal random variable is a χ 2 
 
 (a). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
 
->$Z_{i}^2\sim\chi_{1}^2$  
 
 * Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
-(a). Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s).  
+(a). Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s). 
+
+Let Z = (Y − μ )/ σ . If Y ∼ N ( μ , σ 2 ), then Z 2 follows a χ 2 distribution, which we denote by  
+
+> $Z^2\sim\chi_{1}^2$  
+
+The key point is that the square of a standard normal random variable is a χ 2 random variable with one degree of freedom.  
+
+Let Y 1 , Y 2 , . . . , Y n be independent normally distributed random variables with
+E ( Y i ) = μ i and Var Yi i ( )=σ 2, and let
+Zi=Yi−μi/σi.
+Then
+Σni=2Zi1n2
 
 > $Y_{2}\sim\chi_{3}^2$  
+
+The key points are (1) the sum of n squared standard normal random variables follows a χ 2 distribution with n degrees of freedom and (2) the sum of χ 2 random variables also follows a χ 2 distribution.  
 
 ### Problem 2
 
@@ -54,13 +64,29 @@ a. Specify the distribution of $\overline{A}$ along with the value(s) of paramet
 * Consider the new random variable $\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_{1}}}$  
 (a). Specify the distribution of this new randome variable along with the value(s) of parameter(s).  
 
->$\sim t_{\nu_{1}}$  
+The **Central Limit Theorem** If Y 1 , Y 2 , . . . , Y n are independent and identically distributed random variables with E ( Y i ) = μ and Var( Y i ) = σ 2 < ∞ , then
+Y
+n
+converges in distribution to a standard normal distnbution as n → ∞ . The key
+point is that if n is suffi ciently large, then Y approximately follows a normal
+distribution. What constitutes suffi ciently large depends on the underlying
+distribution of the Y i ’ s.
+
+If Z ∼ N (0, 1), V ∼ χ ν 2 , and Z and V are independent, then  
+
+> $\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_{1}}}\sim t_{\nu_{1}}$  
+
+where t v is the t distribution with v degrees of freedom.  
 
 * Let $V\sim\chi_{\nu_{1}}^2$ where $\nu_{2}$ is the degrees of freedom, $V\ and\ W$ are indipendent.  
 * Consider the new random variable $\frac{W/\nu_{1}}{V/\nu_{2}}$    
 (a). Specify the distribution of this new randome variable and provide value(s) of parameter(s).  
 
-> $\sim F_{\nu_{1},\nu_{2}}$
+ - Let V ∼ χν2 , and let W ∼ χ η 2 . If W are independent, then
+
+> $\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}$
+
+ - where F ν , η is the F distribution with ν and η degrees of freedom. The key point is that the ratio of two independent χ 2 random variables, each divided by their respective degrees of freedom, follows an F distribution.  
 
 ### Problem 3
 * Let $Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$  
