try shiny again

--- a/docs/lecture/lecture00.Rmd
+++ b/docs/lecture/lecture00.Rmd
@@ -60,7 +60,7 @@ lm(hp ~ carb, data=mtcars) %>% summary()
 
 ---
 
-```{r, echo=TRUE, include=FALSE, eval=TRUE}
+```{r echo=TRUE, paged.print=TRUE}
 library(shiny)
 
 # Define UI for application that draws a histogram
