add runtime: shiny to yaml

--- a/docs/lecture/lecture00.Rmd
+++ b/docs/lecture/lecture00.Rmd
@@ -3,6 +3,7 @@ title: "Some tools"
 subtitle: "for the 1st year"
 author: "Shen Qu"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
+runtime: shiny
 output:
   xaringan::moon_reader:
     css: "example.css"
@@ -60,7 +61,7 @@ lm(hp ~ carb, data=mtcars) %>% summary()
 
 ---
 
-```{r echo=TRUE, paged.print=TRUE}
+```{r echo=FALSE, paged.print=TRUE}
 library(shiny)
 
 # Define UI for application that draws a histogram
