--- a/static/lecture/lecture00.Rmd
+++ b/static/lecture/lecture00.Rmd
@@ -61,7 +61,10 @@ lm(hp ~ carb, data=mtcars) %>% summary()
 
 ---
 
-```{r echo=FALSE, paged.print=TRUE}
+```{r echo=TRUE, paged.print=TRUE,}
+knitr::include_app("https://urbanstudies.shinyapps.io/website/", height = "600px")
+knit_print.shiny.render.function()
+
 library(shiny)
 
 # Define UI for application that draws a histogram
