--- a/static/lecture/lecture00.Rmd
+++ b/static/lecture/lecture00.Rmd
@@ -61,8 +61,8 @@ lm(hp ~ carb, data=mtcars) %>% summary()
 
 ---
 
-```{r echo=TRUE, paged.print=TRUE,}
-knitr::include_app("https://urbanstudies.shinyapps.io/website/", height = "600px")
+```{r echo=FALSE, paged.print=TRUE,}
+knitr::include_app("https://urbanstudies.shinyapps.io/website/", height = "800px")
 
 
 library(shiny)
