--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -112,4 +112,12 @@ $$=\sigma^2$$
  
  ##### $\therefore $
 
+## Quarterly Results {.tabset .tabset-fade .tabset-pills}
 
+### By Product
+
+(tab content)
+
+### By Region
+
+(tab content)
