--- a/docs/lab/lab01.Rmd
+++ b/docs/lab/lab01.Rmd
@@ -1,15 +1,15 @@
 ---
-title: 'STAT564 Homework 1'
+title: 'STAT564 Homework 0'
 author: "Shen Qu"
 date: "9/25/2017"
 output: 
   html_document
 
 ---
-## Homework 1 {.tabset .tabset-fade .tabset-pills}
+## Review {.tabset .tabset-fade .tabset-pills}
 ### Problem 1
-* Let $X_1,X_2,X_3\sim iid\ N(\mu,\sigma ^2), and\ Z_i=\frac{X_i-\mu}{\sigma}\ for\ i=1,2,3$  
-(a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
+Let $X_1,X_2,X_3\sim iid\ N(\mu,\sigma ^2), and\ Z_i=\frac{X_i-\mu}{\sigma}\ for\ i=1,2,3$  
+ (a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
 
 $X_1,X_2,X_3$ are three random variable that follows a normal distribution with same mean μ and variance σ 2   
 
@@ -23,23 +23,23 @@ pdf or pmf f(x). This is commonly abbreviated to iid random variables.
 
 
 * Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
-(a.) Comptute the $E(Y_{1})$  
+ (a). Comptute the $E(Y_{1})$  
 
 $$E(Y_{1})=0$$
 
-(a). Comptute the $Var(Y_{1})$  
+ (a). Comptute the $Var(Y_{1})$  
 
 $$Var(Y_{1})=3$$
 
-(a). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
+ (a). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
 
 $$Y_{1}\sim iid\ N(0,3)$$
 
-(a). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
+ (a). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
 
 
-* Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
-(a). Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s). 
+Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
+ (a). Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s). 
 
 Let Z = (Y − μ )/ σ . If Y ∼ N ( μ , σ 2 ), then Z 2 follows a χ 2 distribution, which we denote by  
 
@@ -102,8 +102,11 @@ a. Comptute the $Var(Y|x_{0})$
 
 $$=\sigma^2$$
 
-### Proof $\beta_0$  {.tabset .tabset-fade .tabset-pills} 
-#### When $$\beta$$
+### Proof $E(\hat{\beta_0})=\beta_0$
+$$\because \hat{\beta_0}=\overline{y}-\overline{x}\hat{\beta_1}=\frac{\sum_{i=1}^nY_i}{n}-\overline{x}(\sum C_iY_i)=\sum(\frac1n-\overline{x}C_i)$$  
+$$So\quad E(\hat{\beta_0})=\sum_{i-1}^n(\frac1n-\overline{x}C_i)E(\beta_0+\beta_1X_i+\epsilon_i)=\sum[\frac1nE(\beta_0+\beta_1X_i+\epsilon_i)-\overline{x}C_iE(\beta_0+\beta_1X_i+\epsilon_i)]$$ 
+$$=\frac1n\sum(\beta_0+\beta_1X_i+\epsilon_i)-$$
+ $E(\hat{\beta_0})=\beta_0$
  Because X is independent variable
  
 #### If
